--- a/index.html
+++ b/index.html
@@ -1,18 +1,75 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="assets/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,700;1,800&display=swap" rel="stylesheet">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>on sensuality(p.59)</title>
 </head>
-
 <body>
-  <div class="heading">
-    <p>emma wu</p>
-  </div>
 
+<h1><i>on sensuality,</i> pg.59</h1>
+<br>
+<br>
+<br>
+<p>
+  <br>Sensuality?
+  <br>Sensuality is not <i>repulsive</i>,
+  <br>but a physical
+  <marquee direction="right"><h2>f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m</h2></marquee>
+  <br>and
+  <br><b>un</b>shakable independence,
+  <br>A romantic passion
+  <details>
+  <summary>
+    <b>
+      <i>for the self</i>
+    </b>
+</summary>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self</i></p>
+  <p><i>self.</i></p>
+
+</details>
+</p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p>
+  <small>found poetry from Albert Camus,
+    <i>The Fall</i>
+  </small>
+</p>
 
 </body>
 </html>
