commit from desktop

--- a/index.html
+++ b/index.html
@@ -3,73 +3,61 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>on sensuality(p.59)</title>
+<link rel="stylesheet" href="style.css">
+<link rel="icon" href="assets/imgs/icon.png" type="image/x-icon">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Dela+Gothic+One&family=IM+Fell+DW+Pica:ital@0;1&family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&family=Press+Start+2P&family=Rampart+One&display=swap" rel="stylesheet">
+<title>emmawuci_23</title>
 </head>
 <body>
 
-<h1><i>on sensuality,</i> pg.59</h1>
+<div class="heading"><p>EMMA WU <i>CI_23</i></p></div>
 <br>
 <br>
 <br>
 <p>
-  <br>Sensuality?
-  <br>Sensuality is not <i>repulsive</i>,
-  <br>but a physical
-  <marquee direction="right"><h2>f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m f r e e d o m</h2></marquee>
-  <br>and
-  <br><b>un</b>shakable independence,
-  <br>A romantic passion
-  <details>
-  <summary>
-    <b>
-      <i>for the self</i>
-    </b>
-</summary>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self</i></p>
-  <p><i>self.</i></p>
-
-</details>
-</p>
+  <marquee direction="right">c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o</marquee></p>
+  <br>
+  <br>
+  <div class="wrapper">
+  <div class="studio">
+    <details>
+    <summary>
+      <b>
+        STUDIO
+      </b>
+    </summary>
+    <p><i>Project One</i></p>
+    <p><i>Project Two</i></p>
+    <p><i>Project Three</i></p>
+    <p><i>Project Four</i></p>
+    </details>
+</div>
 <br>
+<div class="lab">
+    <details>
+      <summary>
+        <b>
+          LAB
+        </b>
+      </summary>
+      <p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p>
+    </details>
+</div>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<p>
+</div>
+<!--<p>
   <small>found poetry from Albert Camus,
     <i>The Fall</i>
   </small>
-</p>
+</p>-->
 
 </body>
 </html>
