--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         STUDIO
       </b>
     </summary>
-    <p><i>Project One</i></p>
+    <p><i><a href="studio/project1/index.html">Project One</a></i></p>
     <p><i>Project Two</i></p>
     <p><i>Project Three</i></p>
     <p><i>Project Four</i></p>
