--- a/index.html
+++ b/index.html
@@ -18,28 +18,29 @@
 </head>
 <body>
 
-<div class="heading"><p>EMMA WU <i>CI_23</i></p></div>
+<div class="heading"><p>EMMAWU<i>CI_23</i></p></div>
 <br>
 <br>
 <br>
-<p>
-  <marquee direction="right">c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o</marquee></p>
+<div class="marquee">
+  <p><marquee direction="right">c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o</marquee></p>
+</div>
   <br>
   <br>
   <div class="wrapper">
-  <div class="studio">
-    <details>
-    <summary>
-      <b>
-        STUDIO
-      </b>
-    </summary>
-    <p><i><a href="studio/project1/index.html">Project One</a></i></p>
-    <p><i>Project Two</i></p>
-    <p><i>Project Three</i></p>
-    <p><i>Project Four</i></p>
-    </details>
-</div>
+    <div class="studio">
+      <details>
+      <summary>
+        <b>
+          STUDIO
+        </b>
+      </summary>
+      <div class="proj1"><p><i><a href="studio/project1/index.html">Project One</a></i></p></div>
+      <div class="proj2"><p><i>Project Two</i></p></div>
+      <div class="proj3"><p><i>Project Three</i></p></div>
+      <div class="proj4"><p><i>Project Four</i></p></div>
+      </details>
+    </div>
 <br>
 <div class="lab">
     <details>
@@ -48,7 +49,9 @@
           LAB
         </b>
       </summary>
-      <p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p>
+      <div class="arenapost">
+        <p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p>
+      </div>
     </details>
 </div>
 <br>
