--- a/poster/index.html
+++ b/poster/index.html
@@ -17,7 +17,10 @@
         <span>GUSTAVO</span> <span>BERTONI</span>
     </header>
     <div class="row-2">
-        <img src="./imgs/background.jpg"/>
+        <div class="row-2--content">
+            <img class="row-2--background" src="./imgs/background.jpg"/>
+            <img class="row-2--face" src="./imgs/grill.jpg"/>
+        </div>
     </div>
     <div class="row-3">
         <h1 class="footer-title title-large">
