--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         </b>
       </summary>
       <div class="arenapost">
-        <p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p>
+        <div class="labsummary1"><p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p></div>
+        <div class="labsummary2"><p><i><a href="./poster/index.html">Poster</a></i></p></div>
+
       </div>
     </details>
 </div>
