--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </summary>
       <div class="labsummary1"><p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p></div>
       <div class="labsummary2"><p><i><a href="./lab/poster/index.html">Poster</a></i></p></div>
-      <div class="labsummary3"><p><i><a href="./lab/visual conversation/index.html">Poster</a></i></p></div>
+      <div class="labsummary3"><p><i><a href="./lab/visual conversation/index.html">visual conversation</a></i></p></div>
     </details>
 </div>
 <br>
