--- a/lab/visual_con/script/index.html
+++ b/lab/visual_con/script/index.html
@@ -54,16 +54,7 @@
             <br>
             <div class="line-4">
                 I always make fun of it and stuff, but isn’t everything we’re doing in life a way to be 
-                loved a little more...  
-            </div>
-            <br>
-            <br>
-            <br>
-            <div class="line-5">
-                <span class="sh"><sub>or something?</sub></span>
-                or something?
-                <span class="sh-2"><sup>something?</sup></span>
-                <span class="sh-3"><sub>or something?</sub></span>
+                loved a little more?  
             </div>
         </div>
         <br>
@@ -93,13 +84,13 @@
             <br>
             <br>
                 <div class="line-8">
-                    Sometimes that feels really close, but then other times...
+                    And sometimes that feels really close, but then other times...
                 </div>
             <br>
             <br>
             <br>
                 <div class="line-9">
-                    it just seems, silly, like it would, uh, ruin my life. And it’s not just a fear of commitment or that I’m incapable of caring or loving, because, I can. 
+                    it seems, silly, like it would, uh, ruin my whole life. And it’s not just a - a fear of commitment or that I’m incapable of caring or loving, because, I can. 
                 </div>
             <br>
             <br>
@@ -108,9 +99,6 @@
                     It’s just that, if I’m totally honest with myself...I think I'd rather die knowing that I was really good at something, that 
                     I had excelled in some way, than that I'd just been in a nice, caring relationship.
                 </div>            
-            <br>
-            <br>
-            <br>
             </div>
         </div>
         <br>
@@ -120,44 +108,55 @@
         <br>
         <br>
         <div class="celine-2">
-            <div class="name-3">
-                 Celine:
-            </div>
-            <div class="line-11">
-                You know, I had worked for this older man, and once he told me that he had spent all his life thinking about his career and his work, and he was fifty-two and it suddenly struck him: 
-            </div>
-            <div class="line-12">
-                that he had never really given anything of himself,
-            </div>
-            <div class="line-13">
-                his life was for no one and nothing.
-            </div>
-            <div class="line-14">
-                He was almost crying saying that.
-            </div>
-            <div class="line-15">
-                You know I believe that if there’s any kind of god,
-            </div>
-            <div class="line-16">
-                it wouldn’t be in any of us - not you, not me - 
-            </div>
-            <div class="line-17">
-                but just this little space in between.
-            </div>
-            <div class="line-18">
-                If there’s any kind of magic in this world, it must be in the attempt of understanding someone sharing something.
-            </div>
-            <div class="line-19">
-                I know,
-            </div>
-            <div class="line-20">
-                it’s almost impossible to succeed but,
-            </div>
-            <div class="line-21">
-                who cares really? 
-            </div>
-            <div class="line-22">
-                The answer must be in the attempt. 
+            <div class="celine-2--content">
+                <div class="name-3">
+                    Celine:
+                </div>                        <br>
+            <br>
+                <div class="line-11">
+                    Yeah. You know, I had worked for this older man, and once he told me that he had spent all his life thinking about his career and his work, and he was fifty-two and it suddenly struck him: 
+                </div>                        <br>
+            <br>
+                <div class="line-12">
+                    that he had never really given anything of himself,
+                </div>                        <br>
+            <br>
+                <div class="line-13">
+                    his life was for no one and nothing.
+                </div>                        <br>
+            <br>
+                <div class="line-14">
+                    He was almost crying saying that.
+                </div>                        <br>
+            <br>
+                <div class="line-15">
+                    You know, I believe that if there’s any kind of god,
+                </div>                        <br>
+            <br>
+                <div class="line-16">
+                    it wouldn’t be in any of us - not you or me - 
+                </div>                        <br>
+            <br>
+                <div class="line-17">
+                    but just this little space in between.
+                </div>                        <br>
+            <br>
+                <div class="line-18">
+                    If there’s any kind of magic in this world, it must be in the attempt of understanding someone, sharing something.
+                </div>                        <br>
+            <br>
+                <div class="line-19">
+                    I know, it’s almost impossible to succeed but,
+                </div>                        <br>
+            <br>
+                <div class="line-20">
+                    who cares really? 
+                </div>                        <br>
+            <br>
+                <div class="line-21">
+                    The answer must be in the attempt. 
+                </div>                        <br>
+            <br>
             </div>
         </div>
     <br>
