--- a/lab/visual_con/script/index.html
+++ b/lab/visual_con/script/index.html
@@ -32,13 +32,13 @@
             <br>
             <br>
             <div class="line-1">
-                <p>No, no, no. Okay, speaking <i>seriously</i> here.</p>
+                <p>No, no, no. Okay, talking <i>seriously</i> here.</p>
             </div>
             <br>
             <br>
             <br>
             <div class="line-2">
-                <p>I mean, I feel this <b class="pressure">pressure</b> to be a strong and <span class="independent">independent</span> icon of womanhood and 
+                <p>I mean, I always feel this <b class="pressure">pressure</b> to be a strong and <span class="independent">independent</span> icon of womanhood and 
                 not have it look like my life is revolving around some guy, but... </p>
                 <!--<span class="independent-float">independent</span>-->
             </div> 
@@ -96,7 +96,7 @@
             <br>
             <br>                
                 <div class="line-10">
-                    It’s just that, if I’m totally honest with myself...I think I'd rather die knowing that I was really good at something, that 
+                    It’s just that, if I’m totally honest with myself, I think I'd rather die knowing that I was really good at something, that 
                     I had excelled in some way, than that I'd just been in a nice, caring relationship.
                 </div>            
             </div>
