--- a/studio/project1/index.html
+++ b/studio/project1/index.html
@@ -73,6 +73,6 @@
         <!--</button>-->
       </div>
     </div>
-
+    <div class="mover"><img src="./assets/imgs/movingfinal.png"/></div>
 </body>
 </html>
