--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
       <div class="labsummary1"><p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p></div>
       <div class="labsummary2"><p><i><a href="./lab/poster/index.html">Poster</a></i></p></div>
       <div class="labsummary3"><p><i><a href="./lab/visual_con/index.html">visual conversation</a></i></p></div>
+      <div class="labsummary4"><p><i><a href="./lab/media tunnel/index.html">media tunnel</a></i></p></div>
+
     </details>
 </div>
 <br>
