--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="labsummary2"><p><i><a href="./lab/poster/index.html">Poster</a></i></p></div>
       <div class="labsummary3"><p><i><a href="./lab/visual_con/index.html">visual conversation</a></i></p></div>
       <div class="labsummary4"><p><i><a href="./lab/media tunnel/index.html">media tunnel</a></i></p></div>
-      <div class="labsummary5"><p><i><a href="./lab/film-strip/index.html">media tunnel</a></i></p></div>
+      <div class="labsummary5"><p><i><a href="./lab/film-strip/index.html">film strip</a></i></p></div>
 
 
     </details>
