--- a/studio/project2/index.html
+++ b/studio/project2/index.html
@@ -64,7 +64,7 @@
     <svg width="150%" height="-40px" viewBox="0 0 1600 100">
         <path id="curve9" fill="transparent" d="M0.17,0.23c0,0,105.85,77.7,276.46,73.2s243.8-61.37,408.77-54.05c172.09,7.64,213.4,92.34,413.28,64.19"></path>
     </svg>
-    <svg width="150%" height="-45px" viewBox="0 0 1600 100">
+    <!--<svg width="150%" height="-45px" viewBox="0 0 1600 100">
         <path id="curve10" fill="transparent" d="M0.17,0.23c0,0,105.85,77.7,276.46,73.2s243.8-61.37,408.77-54.05c172.09,7.64,213.4,92.34,413.28,64.19"></path>
       </svg>
       <svg width="150%" height="-50px" viewBox="0 0 1600 100">
@@ -73,7 +73,7 @@
       <svg width="150%" height="-55px" viewBox="0 0 1600 100">
           <path id="curve12" fill="transparent" d="M0.17,0.23c0,0,105.85,77.7,276.46,73.2s243.8-61.37,408.77-54.05c172.09,7.64,213.4,92.34,413.28,64.19"></path>
       </svg>
-        <!--<main>
+        <main>
         <div class="button-wrapper">
             <div class="filters-container">
                 <h2 class="subtitle">BY LOCATION</h2>
