--- a/studio/project2/index.html
+++ b/studio/project2/index.html
@@ -44,10 +44,10 @@
         <svg width="150%" height="-25px" viewBox="0 0 1600 100">
             <path id="curve6" fill="transparent" d="M0.17,0.23c0,0,105.85,77.7,276.46,73.2s243.8-61.37,408.77-54.05c172.09,7.64,213.4,92.34,413.28,64.19"></path>
         </svg>
-    <svg width="100%" height="160px" viewBox="0 0 1098.72 89.55">
+    <svg width="100%" height="160px" viewBox="0 0 1098.72 50">
       <path id="curve" fill="transparent" d="M0.17,0.23c0,0,105.85,77.7,276.46,73.2s243.8-61.37,408.77-54.05c172.09,7.64,213.4,92.34,413.28,64.19"></path>
       <text width="100%" style="transform:translate3d(0,0,0);">
-          <textPath style="transform:translate3d(0,0,0);" alignment-baseline="top" xlink:href="#curve" startOffset="1200px" id="text-path">
+          <textPath style="transform:translate3d(0,0,0);" alignment-baseline="center" xlink:href="#curve" startOffset="1200px" id="text-path">
             <a class= "link" href="./practice-at/index.html">
               brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me 
               brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me brush me
