--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </b>
       </summary>
       <div class="proj1"><p><i><a href="studio/project1/index.html">Project One</a></i></p></div>
-      <div class="proj2"><p><i><a href="lab/practice-at/index.html">Project Two</a></i></p></div>
+      <div class="proj2"><p><i><a href="studio/project2/index.html">Project Two</a></i></p></div>
       <div class="proj3"><p><i>Project Three</i></p></div>
       <div class="proj4"><p><i>Project Four</i></p></div>
       </details>
