--- a/index.html
+++ b/index.html
@@ -5,66 +5,54 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" href="assets/imgs/icon.png" type="image/x-icon">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=Dela+Gothic+One&family=IM+Fell+DW+Pica:ital@0;1&family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&family=Press+Start+2P&family=Rampart+One&display=swap" rel="stylesheet">
 <title>emmawuci_23</title>
 </head>
 <body>
 
-<div class="heading"><p>EMMAWU<i>CI_23</i></p></div>
+<div class="heading">
+  <p class="headingone">INTERACTION</p>
+  <p class="headingtwo">STUDIO</p>
+</div>
 <br>
 <br>
 <br>
-<div class="marquee">
+<!-- <div class="marquee">
   <p><marquee direction="right">c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o c o r e i n t e r a c t i o n t w o</marquee></p>
 </div>
   <br>
-  <br>
-  <div class="wrapper">
-    <div class="studio">
-      <details>
-      <summary>
-        <b>
-          STUDIO
-        </b>
-      </summary>
-      <div class="proj1"><p><i><a href="studio/project1/index.html">Project One</a></i></p></div>
-      <div class="proj2"><p><i><a href="studio/project2/index.html">Project Two</a></i></p></div>
-      <div class="proj3"><p><i>Project Three</i></p></div>
-      <div class="proj4"><p><i>Project Four</i></p></div>
-      </details>
+  <br> -->
+  <div class="container">
+    <div class="subheader">
+      <p class="name">emmawu</p><p class="subtitle">projects</p>
     </div>
+    <div class="aside">
+      <div class="link">
+        <a href="./lab/">lab</a>
+      </div>
+      <h2 class="date">spring 2023</h2>
+    </div>
+    <div class="main">
+      <div class="proj1"><p><i><a href="studio/project1/index.html">one</a></i></p></div>
+      <div class="proj2"><p><i><a href="studio/project2/index.html">two</a></i></p></div>
+      <div class="proj3"><p><i>three</i></p></div>
+    </div>
+  </div>
 <br>
-<div class="lab">
-    <details>
-      <summary>
-        <b>
-          LAB
-        </b>
-      </summary>
-      <div class="labsummary1"><p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p></div>
-      <div class="labsummary2"><p><i><a href="./lab/poster/index.html">Poster</a></i></p></div>
-      <div class="labsummary3"><p><i><a href="./lab/visual_con/index.html">visual conversation</a></i></p></div>
-      <div class="labsummary4"><p><i><a href="./lab/media tunnel/index.html">media tunnel</a></i></p></div>
-      <div class="labsummary5"><p><i><a href="./lab/film-strip/index.html">film strip</a></i></p></div>
-
-
-    </details>
-</div>
+<!-- <div class="lab">
+  <details>
+    <summary>
+      <b>
+        LAB
+      </b>
+    </summary>
+    <div class="labsummary1"><p><i><a href="https://catpic.glitch.me/">Are.na Post</a></i></p></div>
+    <div class="labsummary2"><p><i><a href="./lab/poster/index.html">Poster</a></i></p></div>
+    <div class="labsummary3"><p><i><a href="./lab/visual_con/index.html">visual conversation</a></i></p></div>
+    <div class="labsummary4"><p><i><a href="./lab/media tunnel/index.html">media tunnel</a></i></p></div>
+    <div class="labsummary5"><p><i><a href="./lab/film-strip/index.html">film strip</a></i></p></div>
+  </details>
+</div> -->
 <br>
-</div>
-<!--<p>
-  <small>found poetry from Albert Camus,
-    <i>The Fall</i>
-  </small>
-</p>-->
 
 </body>
 </html>
