--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <div class="proj1"><p><i><a href="studio/project1/index.html">one</a></i></p></div>
       <div class="proj2"><p><i><a href="studio/project2/index.html">two</a></i></p></div>
       <div class="proj3"><p><i>three</i></p></div>
+      <div class="proj4"><p><i><a href="./lab/JSONData/index.html">film strip</a></i></p></div>
+
     </div>
   </div>
 <br>
