--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
       </div>
     </div>
     <div class="main">
-      <div class="proj1">
-        <i><a href="studio/project1/index.html">one</a></i>
-      </div>
+      <div class="proj1"><i><a href="studio/project1/index.html">one</a></i></div>
       <div class="proj2"><i><a href="studio/project2/index.html">two</a></i></div>
-      <div class="proj3"><i><a href="https://ewwamu.github.io/bittenyc.github.io/"></a>three<a></a></i></div>
-      <!-- <div class="proj4"><i><a href="./lab/JSONData/index.html">film strip</a></i></div> -->
+      <div class="proj3"><i><a href="studio/project3/index.html">three</a></i></div>
     </div>
   </div>
 <br>
