--- a/lab/index.html
+++ b/lab/index.html
@@ -60,6 +60,9 @@
 <div class="filmstrip">
   <a class="link" href="./film-strip/index.html">film strip</a>
 </div>
+<div class="sumplay">
+  <a class="link" href="./jsondata/index.html">json data</a>
+</div>
 <br>
 
 </body>
