--- a/lab/index.html
+++ b/lab/index.html
@@ -22,18 +22,12 @@
 <br>
 <br>
 <div class="info">
-  <span class="name"><a href="../ewwaci_23.github.io/index.html">emma wu</a></span>
+  <span class="name"><a href="https://ewwamu.github.io/ewwaci_23.github.io/">emma wu</a></span>
   <br>
   <span class="class">core 2 interaction</span>
   <br>
   <!-- <span class="instructor"><a href="https://jakepfahl.com/">jake pfahl</a></span> -->
   <span class="instructor"><a href="https://youtu.be/7vzb6dp3PJ4">jake pfahl</a></span>
-
-  <br>
-  <span class="resources">
-    figma<br>
-    vs code<br>
-  </span>
   <br>
 </div>
 <!-- <div class="lab">
