--- a/lab/index.html
+++ b/lab/index.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" href="assets/style.css">
   <link rel="icon" href="assets/imgs/icon.png" type="image/x-icon">
   <title></title>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-  <script defer src="./assets/p5.js"></script> -->
+  <script defer src="./assets/p5.js"></script>
   <script defer src="./assets/script.js"></script>
 
 </head>
