--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./assets/style.css">
   <link rel="icon" href="./assets/imgs/emma-04.png" type="image/x-icon">
+  <script defer src="assets/name.js"></script>
+  <script defer src="assets/instructor.js"></script>
+  <script defer src="assets/cd.js"></script>
   <title>emmawuci_23</title>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
@@ -31,6 +34,15 @@
       <div class="proj2"><i><a href="studio/project2/index.html">two</a></i></div>
       <div class="proj3"><i><a href="studio/project3/index.html">three</a></i></div>
     </div>
+  </div>
+  <div class="name">
+    <div class="nameheader">EMMA WU</div>
+  </div>
+  <div class="instructors">
+    <div class="instructorsheader">instructors: hua shu + jake pfahl</div>
+  </div>
+  <div class="cd">
+    <div class="cdheader">parsons communnication design bfa 2025</div>
   </div>
 <br>
 
