--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="instructorsheader">instructors: hua shu + jake pfahl</div>
   </div>
   <div class="cd">
-    <div class="cdheader">parsons communnication design bfa 2025</div>
+    <div class="cdheader">parsons communication design bfa 2025</div>
   </div>
 <br>
 
